--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
+					<li><a href="/about">About</a></li>
+					<li><a href="/resources">Resources</a></li>
 	        		<li><a href="/resume">Resume</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
