--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 					<li><a href="/about">About</a></li>
 					<li><a href="/resources">Resources</a></li>
 	        		<li><a href="/resume">Resume</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<!--<li><a href="/blog">Blog</a></li>-->
 	    		</ul>
 			</nav>
 			<div class="container">
