Add JS that should protect from SPAM mail bots

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<link rel="stylesheet" type="text/css" href="/css/mystyle.css">
+			<script language="javascript" src="/js/email.js"></script>
 		</head>
 		<body>
 			<nav>
@@ -23,7 +24,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:tonya.riepe@gmail.com">email</a></li>
+					<li><a href="mailto:tonya.riepe@gmail.com">email</a></li>
+					<li><script>mail("tonya.riepe","gmail",0,"")</script></li>
 	        		<li><a href="https://github.com/triepe">github.com/triepe</a></li>
 				</ul>
 			</footer>
