changed email from personal to MWNC

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-					<li><a href="mailto:tonya.riepe@gmail.com">email</a></li>
-					<li><script>mail("tonya.riepe","gmail",0,"")</script></li>
+					<li><script>mail("midwestnerdchick","gmail",0,"")</script></li>
 	        		<li><a href="https://github.com/triepe">github.com/triepe</a></li>
 				</ul>
 			</footer>
