--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 					<li><a href="/about">About</a></li>
-					<li><a href="/resources">Resources</a></li>
+					<li><a href="/thealphabetproject">The Alphabet Project</a></li>
 	        		<li><a href="/resume">Resume</a></li>
 	        		<!--<li><a href="/blog">Blog</a></li>-->
 	    		</ul>
